{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 10,
  "lineage": "1207bc9c-e223-9c51-d9a8-cd1381e672dd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:886511165402:security-group/sg-00fd2e26c3e100d94",
            "description": "Security group for EKS worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00fd2e26c3e100d94",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow HTTPS from cluster control plane",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0cc0ca1d80984e8e9"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow all traffic within the node group",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow kubelet API from control plane",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0cc0ca1d80984e8e9"
                ],
                "self": false,
                "to_port": 10250
              }
            ],
            "name": "robot-shop-eks-cluster-node-group-sg",
            "name_prefix": "",
            "owner_id": "886511165402",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Name": "robot-shop-eks-cluster-node-group-sg",
              "Project": "Robot-Shop-EKS",
              "kubernetes.io/cluster/robot-shop-eks-cluster": "owned"
            },
            "tags_all": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Name": "robot-shop-eks-cluster-node-group-sg",
              "Owner": "DevOps-Team",
              "Project": "Robot-Shop-EKS",
              "kubernetes.io/cluster/robot-shop-eks-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d4a801a4012c8438"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.terraform_remote_state.eks",
            "data.terraform_remote_state.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_inbound_from_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker nodes to communicate with cluster API",
            "from_port": 443,
            "id": "sgrule-1881815040",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0cc0ca1d80984e8e9",
            "security_group_rule_id": "sgr-0d40f260ae6f0fd7a",
            "self": false,
            "source_security_group_id": "sg-00fd2e26c3e100d94",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.node_group",
            "data.terraform_remote_state.eks",
            "data.terraform_remote_state.vpc"
          ]
        }
      ]
    }
  ]
}